fix nav log in and sign up button visibility

--- a/client/src/components/styles/navbar.css
+++ b/client/src/components/styles/navbar.css
@@ -21,10 +21,12 @@ i.active-page {
 }
 
 #logo {
-  height: 35px;
-  width: 120px;
-  max-height: fit-content;
-  margin-bottom: 15px;
+  /* height: 35px; */
+  /* width: 120px; */
+  /* max-height: fit-content; */
+  /* margin-bottom: 15px; */
+  /* width: 100vh; */
+  /* border: 1px solid black; */
 }
 
 nav#navbar.navbar.container.is-widescreen {
@@ -47,6 +49,7 @@ div.navbar-brand {
 div.navbar-brand .navbar-item {
   height: 33px;
   min-height: unset;
+  
 }
 
 div.navbar-brand img {
@@ -62,13 +65,22 @@ div.navbar-brand img {
 
 #log-in-button {
   background-color: #5bc5a7;
-  box-shadow: -2px 2px darkgray;
+  /* box-shadow: -2px 2px darkgray; */
+  border: 1px solid black;
+  margin-right: 10px;
 }
 
 #log-in-button:hover {
-  box-shadow: -2px 2px black;
+  /* box-shadow: -2px 2px black;; */
+  background-color: darkgray;
 }
 
 #sign-up-button {
   background-color: #ff5216;
+}
+
+#sign-up-button:hover {
+  background-color: darkgray;
+  color: black;
+  border: 1px solid black;
 }
